# pptranssmt

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README.md
BAST/: gpred.h
POGLoader/: pog.cpp  pog.h
PPTRANSSMT/: ppTrans.cpp  ppTransSmt
PPTransTPTP/: CMakeLists.txt  TPTPaxioms.ax  decomposition.cpp  decomposition.h  ppTransConsoleTPTP.cpp  ppTransTPTP.cpp  ppTransTPTP.h  ppTransTPTPNonIncr.cpp  ppTransTPTPNonIncr.h  proofReaderTPTP.h
Scripts/: comparison.sh  translate.sh
